--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Hello, Rails!</h1>
-<%= link_to 'ToDo App', controller: 'tasks' %>
+<h1>Welcome to my To Do App!</h1>
+<%= link_to 'Existing user', login_path %><br>
+<%= link_to 'Signup', new_user_path %>
